--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <title>Polka Never Dies!</title>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/css/stylesheet.css">
+    <link rel="stylesheet" href="../css/stylesheet.css">
 
     <!-- Import Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
